DXP-1742 Use unstructured nodes and remove orphaned parent nodes; set version to 1.0.0 (#54)